--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config build/webpack.config.dev.js",
+    "dev": "webpack-dev-server --config build/webpack.dev.js",
+    "build": "webpack --config build/webpack.prod.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "core-js": "^3.6.4",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.2.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
-    "@mdi/font": "^3.9.97",
+    "@mdi/font": "^4.8.95",
+    "@mdi/js": "^4.8.95",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.1",
     "eslint": "^6.8.0",
@@ -36,15 +44,13 @@
     "prettier": "^1.19.1",
     "responsive-loader": "^1.2.0",
     "sharp": "^0.23.4",
-    "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
-    "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
-    "vuetify": "^2.2.1",
     "vuetify-loader": "^1.4.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
   }
 }
